# cookiecutter-my-template

./: .gitignore  .pre-commit-config.yaml  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{cookiecutter.package_name}}/: __init__.py
