[tool.poetry]
name = "cookiecutter-my-template"
version = "0.1.0"
description = "A python job repository template for personal project"
authors = ["Damon Gao"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
cookiecutter="^2.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
