[tool.poetry]
name = "{{ cookiecutter.project_name | lower | replace(' ', '-') }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"
packages = [{include = "{{ cookiecutter.package_name }}", from ="src"}]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"